Wed Aug 18 11:22:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (init_env): initialize HOME and USER environment
	  variables unless set.

Tue Aug 17 01:36:32 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/usage.rb: Remove extra indent. Tidy 'ri' option
	  parsing so RDoc::usage plays better with OptionParser.

Sat Aug 14 02:48:16 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/usage.rb: Added. Allows command line programs
	  to report usage using their initial RDoc comment.

Sat Aug 14 01:25:48 2004  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/token.c: re2c no longer compiled with bit vectors.  caused
	  problems for non-ascii characters. [ruby-core:03280]
	* ext/syck/implicit.c: ditto.
	* ext/syck/bytecode.c: ditto.

Fri Aug 13 12:55:20 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils.parse_range_header):
	  fix regex for range-spec.

	* lib/webrick/httpservlet/filehandler.rb
	  (WEBrick::HTTPServlet::DefaultFileHandler#make_partial_content):
	  multipart/byteranges response was broken.

	* lib/xmlrpc/server.rb: refine example code.

Thu Aug 12 10:54:17 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* rubyio.h (rb_eof_error): should mark as NORETURN.

	* win32/win32.c (make_cmdvector): adjust escaped successive
	  double-quote handling.

Thu Aug 12 01:53:10 2004  Tanaka Akira  <akr@m17n.org>

	* io.c (read_buffered_data): extracted from rb_io_fread.
	  (io_readpartial): new method IO#readpartial.
	  [ruby-dev:24055]

Wed Aug 11 17:17:50 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (RPATHFLAG): stop setting RPATHFLAG on Interix.

Mon Aug  9 15:03:20 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpservlet/erbhandler.rb
	  (WEBrick::HTTPServlet::ERBHandler#do_GET): should select media type
	  by suffix of script filename.

Mon Aug  9 12:51:43 2004  Dave Thomas  <dave@pragprog.com>

	* dir.c (dir_s_glob): Roll in Austin Ziegler's Dir.glob and