@@ -6380,14 +6380,7 @@ rb_obj_instance_eval(argc, argv, self)
     VALUE *argv;
     VALUE self;
 {
-    VALUE klass;
-
-    if (rb_special_const_p(self)) {
-	klass = Qnil;
-    }
-    else {
-	klass = rb_singleton_class(self);
-    }
+    VALUE klass = rb_singleton_class(self);
 
     return specific_eval(argc, argv, klass, self);
 }
